Fix z-index

--- a/new.css
+++ b/new.css
@@ -47,7 +47,6 @@ section {
   position: relative;
   text-align: center;
   width: 48%;
-  z-index: 2;
 
   padding: 10px 10px 20px 10px;
   box-shadow: 2px 2px 5px lightgrey;
